--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -10,8 +10,13 @@
         height: auto; /* Allow the container to adjust height based on content */
         overflow-y: auto; /* Enable vertical scrolling for the entire container */
         align-items: stretch; /* Make sure child items stretch to the same height */
-        background: url('../static/images/backgrounds/background.png') no-repeat center center fixed;
+        background: url('../static/images/backgrounds/background-2.png') no-repeat center center fixed;
         background-size: cover;
+        backdrop-filter: blur(0px); /* Optional: adds a blur effect behind the text */
+    }
+
+    .polaroid .caption{
+        font-weight: bolder;
     }
 
     @media (min-width: 768px) {
@@ -39,6 +44,8 @@
             max-width: 33%;
             height: 100%; /* Ensure the image container takes up the full height on larger screens */
             margin-bottom: 0; /* Remove bottom margin for larger screens */
+            flex-direction: column;
+            justify-content: flex-start; /* Center the image */
         }
     }
 
@@ -81,6 +88,7 @@
     @media screen and (min-width: 390px) and (max-width: 390px) and (max-height: 844px) {
         .slideshow-container {
             min-height: 45vh; /* Set the desired minimum height for iPhone 12 Pro */
+            margin-top: 6vh;
         }
         .story-content {
             padding-top: 20px; /* Add padding to avoid overlap */
@@ -111,7 +119,7 @@
     }
 
     .polaroid {
-        background: rgba(255, 245, 225, 0.2); /* Yellowish tint with 80% opacity */
+        background: #fff8e9; /* Yellowish tint with 80% opacity */
         padding: 10px;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -127,14 +135,15 @@
         height: 400px; /* Fixed height for consistency */
         object-fit: contain;
         object-position: center; /* Center the image */
-        border-bottom: 1px solid #ddd;
+       /*border-bottom: 1px solid #ddd;*/
     }
 
     .polaroid .caption {
         margin-top: 10px;
         font-family: 'Cinzel', serif;
-        font-size: 14px;
-        color: #333;
+        font-size: 17px;
+        font-weight: 200;
+        color: #d9534f;
     }
 
     .active-slide {
@@ -150,7 +159,7 @@
         flex-direction: column;
         align-items: flex-start; /* Ensure content starts at the top */
         background-color: rgba(255, 255, 255, 0.2); /* White with 20% opacity */
-        backdrop-filter: blur(10px); /* Optional: adds a blur effect behind the text */
+        backdrop-filter: blur(0px); /* Optional: adds a blur effect behind the text */
         color: #333; /* Text color */
         border-radius: 8px; /* Optional: adds rounded corners */
     }
@@ -161,11 +170,12 @@
             height: 100%; /* Ensure the content takes up the full height on larger screens */
             overflow-y: auto; /* Enable vertical scrolling for the content on larger screens */
             padding-top: 0; /* Remove padding for larger screens */
+            margin-top:20px;
         }
     }
 
     .story-card {
-        background-color: rgba(255, 255, 255, 0.2); /* White with 80% opacity */
+        background-color: #fff8e9; /* White with 80% opacity */
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         margin-bottom: 20px;
@@ -177,28 +187,30 @@
     .story-content h2 {
         font-size: 2em;
         margin-bottom: 20px;
+        font-weight: 200;
         width: 100%; /* Ensure the heading covers the full width */
         color: #d9534f; /* Updated color */
         font-family: 'Cinzel', serif; /* Updated font-family */
         text-transform: uppercase; /* Example text transformation */
         text-align: left; /* Left align the heading */
         margin: 0; /* Remove default margin */
-        padding: 20px 0; /* Add padding to the heading */
+        padding: 20px 10px 0px 0px;/* Add padding to the heading */
     }
 
     .story-item {
         margin-bottom: 20px;
         width: 100%; /* Ensure each story item covers the full width */
     }
+    
 </style>
 
 <div class="story-page-container">
     <div class="slideshow-container">
         {% for i in range(1, captions|length + 1) %}
-        <div class="polaroid {% if i == 1 %}active-slide{% endif %}">
-            <img src="../static/images/our-story/timeline-{{ i }}.jpg" alt="Polaroid Image {{ i }}">
-            <div class="caption">{{ captions[i-1] }}</div>
-        </div>
+            <div class="polaroid {% if i == 1 %}active-slide{% endif %}">
+                <img src="../static/images/our-story/timeline-{{ i }}.jpg" alt="Polaroid Image {{ i }}">
+                <div class="caption">{{ captions[i-1] }}</div>
+            </div>
         {% endfor %}
     </div>
     <div class="story-content">
