--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -77,6 +77,7 @@
     @media screen and (min-width: 376px) and (max-width: 414px) and (max-height: 896px) {
         .slideshow-container {
             min-height: 52vh; /* Set the desired minimum height for iPhone XR */
+            margin-top: 3vh;
         }
         .story-content {
             padding-top: 20px; /* Add padding to avoid overlap */
@@ -100,10 +101,11 @@
     @media screen and (min-width: 430px) and (max-width: 430px) and (max-height: 932px) {
         .slideshow-container {
             min-height: 50vh; /* Set the desired minimum height for iPhone 14 Pro Max */
+            margin-top: 2vh;
         }
         .story-content {
             padding-top: 20px; /* Add padding to avoid overlap */
-            margin-top: 20px; /* Ensure enough space between containers */
+            margin-top: 10px; /* Ensure enough space between containers */
         }
     }
 
