--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -101,7 +101,7 @@
     @media screen and (min-width: 430px) and (max-width: 430px) and (max-height: 932px) {
         .slideshow-container {
             min-height: 50vh; /* Set the desired minimum height for iPhone 14 Pro Max */
-            margin-top: 2vh;
+            margin-top: 4vh;
         }
         .story-content {
             padding-top: 20px; /* Add padding to avoid overlap */
@@ -142,10 +142,10 @@
 
     .polaroid .caption {
         margin-top: 10px;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
         font-size: 17px;
-        font-weight: 200;
-        color: #d9534f;
+        font-weight: 600;
+        color: #333;
     }
 
     .active-slide {
