--- a/templates/auth.html
+++ b/templates/auth.html
@@ -44,7 +44,7 @@
     }
 
     .auth-container h2 {
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
         font-size: 2em;
         color: #d9534f;
         margin-bottom: 20px;
@@ -57,7 +57,7 @@
     }
 
     .form-group label {
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
         font-size: 1.2em;
         color: #d9534f;
         display: block; /* Ensure label is on a new line */
@@ -70,7 +70,7 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         box-sizing: border-box; /* Ensure padding doesn't affect total width */
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
     }
 
     .btn {
@@ -81,7 +81,7 @@
         border-radius: 5px;
         font-size: 1em;
         cursor: pointer;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
         width: 100%;
         text-align: center;
     }
@@ -94,7 +94,7 @@
         list-style-type: none;
         padding: 0;
         color: #d9534f;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
         font-size: 1em;
         text-align: center;
         margin-top: 20px;
