--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -16,7 +16,7 @@
     }
 
     .polaroid .caption{
-        font-weight: bolder;
+        font-weight: 100;
     }
 
     @media (min-width: 768px) {
@@ -144,7 +144,7 @@
         margin-top: 10px;
         font-family: 'Quicksand', serif;
         font-size: 17px;
-        font-weight: 600;
+        font-weight: 100;
         color: #333;
     }
 
@@ -192,7 +192,7 @@
         font-weight: 200;
         width: 100%; /* Ensure the heading covers the full width */
         color: #d9534f; /* Updated color */
-        font-family: 'Cinzel', serif; /* Updated font-family */
+        font-family: 'Quicksand', serif; /* Updated font-family */
         text-transform: uppercase; /* Example text transformation */
         text-align: left; /* Left align the heading */
         margin: 0; /* Remove default margin */
