--- a/templates/rsvp_form.html
+++ b/templates/rsvp_form.html
@@ -60,7 +60,7 @@
     }
 
     .form-group label {
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
         font-size: 1.2em;
         color: #d9534f;
         display: block; /* Ensure label is on a new line */
@@ -75,7 +75,7 @@
         border-radius: 5px;
         font-size: 1em;
         cursor: pointer;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
     }
 
     .btn:hover {
