--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -39,7 +39,7 @@
 
     .schedule-header h2 {
         color: #d9534f;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
     }
 
     .schedule-content {
@@ -74,7 +74,7 @@
         margin: 0;
         font-size: 24px;
         color: #d9534f;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
     }
 
     .event-details p {
