--- a/templates/travel.html
+++ b/templates/travel.html
@@ -83,7 +83,7 @@
         margin-bottom: 20px;
         width: 100%; /* Ensure the heading covers the full width */
         color: #d9534f; /* Updated color */
-        font-family: 'Cinzel', serif; /* Updated font-family */
+        font-family: 'Quicksand', serif; /* Updated font-family */
         text-transform: uppercase; /* Example text transformation */
         text-align: left; /* Left align the heading */
         margin: 0; /* Remove default margin */
