--- a/templates/faq.html
+++ b/templates/faq.html
@@ -75,7 +75,7 @@
         margin-bottom: 20px;
         width: 100%; /* Ensure the heading covers the full width */
         color: #d9534f; /* Updated color */
-        font-family: 'Cinzel', serif; /* Updated font-family */
+        font-family: 'Quicksand', serif; /* Updated font-family */
         text-align: left; /* Left align the heading */
         margin: 0; /* Remove default margin */
         padding: 20px 0; /* Add padding to the heading */
