--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
     .text-container h3, .text-container h5 {
         margin: 0;
         color: #d9534f;
-        font-family: 'Cinzel', serif;
+        font-family: 'Quicksand', serif;
     }
 
     .text-container h3 {
