--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
                 <a href="{{ url_for('home') }}">A & M</a>
             </div>
             <div class="nav-links">
-                <a href="{{ url_for('our_story') }}">Our Story</a>
-                <a href="{{ url_for('schedule') }}">Schedule</a>
+                <a href="{{ url_for('our_story') }}">OUR STORY</a>
+                <a href="{{ url_for('schedule') }}">SCHEDULE</a>
                 <a href="{{ url_for('faq') }}">FAQs</a>
-                <a href="{{ url_for('travel') }}">Travel</a>
+                <a href="{{ url_for('travel') }}">TRAVEL</a>
                 <a href="{{ url_for('rsvp') }}">RSVP</a>
             </div>
             <div class="hamburger">
