--- a/templates/auth.html
+++ b/templates/auth.html
@@ -62,6 +62,7 @@
         color: #d9534f;
         display: block; /* Ensure label is on a new line */
         margin-bottom: 10px;
+        font-weight: 100;
     }
 
     .form-control {
@@ -99,11 +100,19 @@
         text-align: center;
         margin-top: 20px;
     }
+    .auth-header h2 {
+        color: #d9534f;
+        font-family: 'Quicksand', serif;
+        font-weight: 300;
+    }
 </style>
 
 <div class="background-wrapper">
     <div class="auth-container">
-        <h2>RSVP Authentication</h2>
+        <div class="auth-header">
+            <h2>RSVP AUTHENTICATION</h2>
+            <br>
+        </div>
         <form method="POST" action="{{ url_for('rsvp') }}" class="form">
             <div class="form-group">
                 <label for="first_name">First Name</label>
