--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -224,7 +224,7 @@
                 <p>They’re each other’s best friends before anything and that’s what makes their story so special. All their friends always take their names together “Mayank Ananya” as though they always come in a combo package!</p>
                 <p>Ananya’s favorite thing about Mayank (and the list was long) is his smile and ever-positive attitude! If you want a pal for any adventure, no matter what it is, Mayank’s your guy!</p>
                 <p>Mayank’s favorite thing about Ananya is her kindness and the fact that she's always looking out for others.</p>
-                <p><strong>Some of their favorites (in no specific order):</strong><br>Their family, hiking, travelling, navigating without google maps (and getting lost), cooking, trying out new food, dancing, crime-thrillers, spontaneous trips (planned in <1 hr).</p>
+                <p>Some of their favorites (in no specific order): Their family, hiking, travelling, navigating without google maps (and getting lost), cooking, trying out new food, dancing, crime-thrillers, spontaneous trips (planned in <1 hr).</p>
             </div>
         </div>
         <div class="story-card">
