--- a/templates/travel.html
+++ b/templates/travel.html
@@ -108,12 +108,17 @@
         padding: 10px;
         border: 1px solid #ddd;
         border-top: none;
-        background-color: rgba(255, 255, 255, 0.8); /* Background color for answer section */
+        background-color: rgba(255, 245, 255, 0.66); /* Background color for answer section */
         width: 100%; /* Ensure the answer box covers the full width */
         box-sizing: border-box; /* Include padding and border in the element's total width */
     }
     .travel-answer.active {
         display: block;
+    }
+    .travel-header h2 {
+        color: #d9534f;
+        font-family: 'Quicksand', serif;
+        font-weight: 300;
     }
 </style>
 
@@ -126,7 +131,9 @@
     </div>
     <div class="travel-content">
         <div class="travel-card">
-        <h2 class="page-heading">Travel Information</h2>
+            <div class="travel-header">
+                <h2>TRAVEL INFORMATION</h2>
+            </div>
         <div class="travel-item">
             <button class="travel-question">Event Date and Venue</button>
             <div class="travel-answer">
