Update text for multiple pages

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -153,7 +153,7 @@
         <div class="faq-item">
             <button class="faq-question">How do I RSVP? And what is the deadline?</button>
             <div class="faq-answer">
-                <p>Tada - <a href="{{ url_for('rsvp') }}">here </a>you go. Please RSVP by August 15th so that we can have a accurate headcount. </p>
+                <p>Tada - <a href="{{ url_for('rsvp') }}">here</a> you go. Please RSVP by August 20th so that we can have a accurate headcount. </p>
             </div>
         </div>
         <div class="faq-item">
@@ -166,7 +166,7 @@
             <button class="faq-question">What should I do if I have any dietary restrictions?</button>
             <div class="faq-answer">
                 <p>Most events will have traditional Indian food.
-                    Please let us know your dietary restrictions on the <a href="{{ url_for('rsvp') }}">RSVP page</a> and we will try to accommodate to our best ability. </p>
+                    Please let us know your dietary restrictions on the <a href="{{ url_for('rsvp') }}">RSVP page</a> and we will try our best to accommodate. </p>
             </div>
         </div>
         <div class="faq-item">
