--- a/templates/travel.html
+++ b/templates/travel.html
@@ -156,21 +156,23 @@
                 <h4>By Air</h4>
                 <p>Jaipur International Airport is located ~1 hr away from Samode Bagh and has access to all major flights to different cities.</p>
                 <h4>By Train</h4>
-                <p>Jaipur Railway Station offers direct trains to all major cities of the country. If wondering how to reach Jaipur from Delhi by train, trains such as Shatabdi, Rajdhani, and Duronto are good options.</p>
+                <p>Jaipur Railway Station offers direct trains to all major cities of the country.
+                    If you're wondering how to reach Jaipur from Delhi by train, trains such as Shatabdi, Rajdhani, and Duronto are good options.</p>
                 <h4>By Road</h4>
-                <p>Jaipur is connected to all major cities via roads. You can take a bus or hire a cab from nearby cities. If you’re coming from Delhi, it will take you ~5 hours (or more if traffic). The road is scenic and the views are gorgeous.</p>
+                <p>Jaipur is connected to all major cities via roads. You can take a bus or hire a cab from nearby cities.
+                    If you’re coming from Delhi, it will take you ~5 hours (or more if traffic). The road is scenic and the views are gorgeous.</p>
             </div>
         </div>
         <div class="travel-item">
             <button class="travel-question">Accommodation</button>
             <div class="travel-answer">
-                <p>We have reserved rooms at <a href="https://samode.com/samode-bagh/">Samode Bagh </a>for Nov 21-22.</p>
+                <p>We have reserved rooms at <a href="https://samode.com/samode-bagh/">Samode Bagh</a> for Nov 21-22.</p>
                 <p>However, if you wish to explore Jaipur after that, we suggest living close to the city center. The city has many great hotels and accommodation options (for a range of rates). Some suggestions below:</p>
                 <ul>
                     <li><a href="https://www.theleela.com/the-leela-palace-jaipur">Leela Palace</a></li>
                     <li><a href="https://www.tridenthotels.com/hotels-in-jaipur/?utm_source=GMBlisting&utm_medium=organic">Trident</a></li>
                     <li><a href="https://www.tajhotels.com/en-in/hotels/jai-mahal-palace-jaipur?utm_source=Google&utm_medium=Local&utm_campaign=Jai-Mahal-Palace-Jaipur">Jai Mahal Palace</a></li>
-                    <li><a href="https://www.hyatt.com/hyatt-regency/en-US/jairj-hyatt-regency-jaipur-mansarovar">Hyatt Regency Jaipur Mansarovar</a></li>
+                    <li><a href="https://www.hyatt.com/hyatt-regency/en-US/jairj-hyatt-regency-jaipur-mansarovar">Hyatt Regency</a></li>
                 </ul>
                 <p>Feel free to reach out to us and we can help you with recommendations.</p>
             </div>
@@ -198,7 +200,7 @@
                 <h4>Where To Shop?</h4>
                 <p>Jaipur is a shopper’s paradise, offering everything from a gorgeous variety of textiles to fine jewelry.</p>
                 <ul>
-                    <li>If you’re up for an adventure to shop in the local markets and can brave the crowds, head to Johari Bazaar, Bapu Bazaar, Nehru Bazaar.</li>
+                    <li>If you’re up for an adventure to shop in the local markets and can brave the crowds, head to Johari Bazaar, Bapu Bazaar, and Nehru Bazaar.</li>
                     <li>Textiles: Apart from local shops (that we’d highly recommend trying first), you can head to stores like Anokhi, Cottons, Kilol, and Idli (hand-block textiles with a modern twist).</li>
                     <li>Jewelry: Johari Bazaar has many small stores that offer gorgeous jewelry made of gold, silver, and precious gemstones. Remember to always bargain. Or if you prefer, you can visit more established stores like Amrapali Jewels.</li>
                 </ul>
