--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -149,6 +149,7 @@
         font-size: 17px;
         font-weight: 600;
         color: #333;
+        text-transform: uppercase;
     }
 
     .active-slide {
