Add dates for events in the schedule page

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="event-info">
-                <p>Time: 12 pm onwards</p>
+                <p>Time: 21st Nov, 12 pm onwards</p>
                 <p>Venue: Poolside, Samode Bagh</p>
                 <p>Suggested Attire: Indian, Yellow hues in Lehariya / Bandhej prints</p>
             </div>
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="event-info">
-                <p>Time: 7:30 pm onwards</p>
+                <p>Time: 21st Nov, 7:30 pm onwards</p>
                 <p>Venue: Charbagh, Samode Bagh</p>
                 <p>Suggested Attire: Indo-Western, Embellished</p>
             </div>
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="event-info">
-                <p>Time: 12 pm onwards </p>
+                <p>Time: 22nd Nov, 12 pm onwards </p>
                 <p>Venue: Mughal Gardens, Samode Bagh</p>
                 <p>Suggested Attire: Indian, Pastel hues</p>
             </div>
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="event-info">
-                <p>Time: 7:30 pm onwards</p>
+                <p>Time: 22nd Nov, 7:30 pm onwards</p>
                 <p>Venue: Ballroom, Samode Bagh</p>
                 <p>Suggested Attire: Prom / Party Wear</p>
             </div>
