Remove deadline from RSVP FAQ

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -151,9 +151,9 @@
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">How do I RSVP? And what is the deadline?</button>
+            <button class="faq-question">How do I RSVP?</button>
             <div class="faq-answer">
-                <p>Tada - <a href="{{ url_for('rsvp') }}">here</a> you go. Please RSVP by August 20th so that we can have a accurate headcount. </p>
+                <p>Tada - <a href="{{ url_for('rsvp') }}">here</a> you go. </p>
             </div>
         </div>
         <div class="faq-item">
