--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,7 @@
     </div>
     <div class="text-container">
         <h2>November 21st - 22nd, 2024</h2>
-        <h3>{{ days_to_go }} DAYS TO GO!</h3>
+        <h3>Thank you for celebrating with us!</h3>
     </div>
 </div>
 {% endblock %}
